grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy        # < name of the deployment
  namespace: grocy   # < namespace where place the deployment and pods
  labels:
    app: grocy      # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: grocy
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: grocy
    spec:
      - name: grocy-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/grocy-config #
      containers:
      - image: lscr.io/linuxserver/grocy:latest # < the name of the docker image we will use
        name: grocy                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "568" # < group "user"
        - name: PUID
          value: "568" # < user "docker"
        - name: TZ
          value: Europe/Brussels

        ports:                              # < the ports required (see container documentation)
         - containerPort: 80
           name: webinterface
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: grocy-config               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
